[package]
name = "learn-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.4", features = ["full"] }
anyhow = "1.0.57"
axum = "0.5.6"
tokio-util = "0.7.2"
lazy_static = "1.4.0"
